[metadata]
name = github-ssh
version = 2019.02.23
url = https://github.com/looking-for-a-job/github-ssh
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = config github ssh for multiple github accounts

[options]
install_requires = 
	setuptools
scripts = 
	scripts/github-ssh
